# Team02---DigitalTripBook

./: README.md
DigitalTripBook/: databasehandler.cpp  databasehandler.h
DigitalTripBook (outdated)/: TripDetailPage.qml
Team02_DigitalTripBook/: CMakeLists.txt  Colors.qml  Colors_backup.qml  LoadingScreen.qml  Main.qml  MyTripsScreen.qml  TripDetailsScreen_Simple.qml  TripDetailsScreen_backup.qml  TripTrackingScreen.qml  influxdbclient.cpp  influxdbclient.h  main.cpp  qmldir  trip_data.db
